# asterisk-opus

./: CMakeLists.txt  Makefile.mak
codecs/: CMakeLists.txt
formats/: CMakeLists.txt
res/: CMakeLists.txt
